--- a/styles.css
+++ b/styles.css
@@ -6,34 +6,51 @@
 	left: 0;
 	z-index: 1;
 	padding: 15px;
-	text-align: center;
-	font-family: Monaco;
+	text-align: left;
+	font-family: "Poppins", Sans-serif;
 	text-transform: uppercase;
-	font-size: 50px;
+	font-size: 20px;
 	opacity: 90%;
 }
 
 img[src*='banana'] {
-height: 80px;
+height: 40px;
 }
 
 .button {
-	display: inline-block;
 	height: 30px;
 	font-size: 10px;
 	text-align: center;
-
+	display: inline-block;
 }
 
+a {
+	color: #006400;
+}
+
+a:hover {
+	color: #FFD700;
+}
+
+a:visited {
+	color: #556B2F;
+}
 
 .begin,
 .HTML-elements,
 .cssstyle,
+.content-sizing,
+.text-styling,
+.color,
 .table,
 .font,
-.cmd-line {
-	margin: 50px 150px 150px 150px;
-	padding: 200px 0 0 0;
+.link-style,
+.cmd-line,
+.box-shadow,
+.breadcrumb,
+.NEW-SECTION {
+	margin: 150px 150px 150px 150px;
+	padding: 100px 0 0 0;
 
 }
 
@@ -44,22 +61,48 @@ height: 80px;
 	position: fixed;
 	bottom: 0;
 	left: 0;
-	padding: 20px;
-	text-align: left;
-	font-family: Monospace;
-	text-transform: uppercase;
-	font-size: 50px;
+	padding-bottom: 5px;
+	text-align: right;
+	font-family: "Poppins";
+	font-size: 20px;
 	opacity: 90%;
 }
 
+.main {
+	font-family: "Prata", Serif;
+	font-size: 25px;
+	color: black;	text-align: center;
+	padding-top: 350px; 
+
+
+}
+
+main {
+	width: 100%;
+	height: 600px;
+	border: 1px solid yellow;
+	padding: 8px;
+	margin-top: -10px;
+	margin-left: -10px;
+	background-color: rgb(255,250,205, 0.9);
+}
+
+section {
+	padding: 30px 100px;
+	background-color: #8FBC8F;
+	border: 2px solid black;
+	border-radius: 3px;
+	margin-bottom: 20px;
+
+}
+
 h1 {
-	font-family: Monospace;
-	text-transform: uppercase;
+	font-family: "Poppins", Sans-serif;
 	font-size: 25px;
 }
 
 h2 {
-	font-family: Verdana;
+	font-family: "Poiret One";
 	font-weight: bold;
 	font-size: 15px;
 }
@@ -93,10 +136,206 @@ th, td {
 	padding: 8px;
 }
 
-section {
-	padding: 30px 100px;
-	background-color: #8FBC8F;
+
+
+/* LINKSTYLE */
+
+.link-style.button {
+  height: 50px;
+  width: 200px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.link-style.skeuomorphic {
+  border: 2px solid #0c960c;
+  border-radius: 5px;
+  color: #F8F8F8;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2), 0px -2px 2px rgba(255, 255, 255, 0.5) inset, 0 2px 2px rgba(255, 255, 255, 0.8) inset;
+  background: linear-gradient(#1D1, #0ebc0e);
+  text-shadow: 0 -2px #0c960c;
+}
+
+.link-style.skeuomorphic:hover {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1), 0px -2px 2px rgba(255, 255, 255, 0.25) inset, 0 2px 2px rgba(255, 255, 255, 0.4) inset;
+  background: #0ebc0e;
+  background: linear-gradient(#0ebc0e, #0c960c);
+  border-color: #064f06;
+}
+
+.link-style.skeuomorphic:active {
+  margin-top: 2px;
+  margin-bottom: -2px;
+  box-shadow: 0px 2px 2px rgba(63, 63, 63, 0.1), 0px -2px 2px rgba(255, 255, 255, 0.25) inset, 0 2px 2px rgba(255, 255, 255, 0.4) inset;
+  background: #0c960c;
+  background: linear-gradient(#0c960c, #0ebc0e);
+}
+
+.link-style.flat {
+  background-color: #1D1;
+  color: #fff;
+  border: 2px solid #12dd23;
+  border-radius: 10px;
+}
+
+.link-style.flat:hover {
+  background-color: #0c960c;
+  transition: background-color .15s, font-size .15s;
+  font-size: 18px;
+}
+
+.link-style.flat:active {
+  border-color: #fff;
+}
+
+/* BOXSHADOW */
+
+.boxshadow1 {
+	box-shadow: 10px 10px;
+ 	margin: 12px;
+}
+
+.boxshadow2 {
+	box-shadow: 10px 10px lightblue;
+ 	margin: 12px;
+}
+
+.boxshadow3 {
+	box-shadow: 10px 10px 5px lightblue;
+ 	margin: 12px;
+}
+
+.boxshadow4 {
+	box-shadow: 10px 10px 5px 10px lightblue;
+	margin: 12px;
+}
+
+.boxshadow5 {
+	box-shadow: 10px 10px 5px lightblue inset;
+	margin: 12px;
+}
+
+.boxshadow6 {
+	box-shadow: 5px 5px blue, 10px 10px red, 15px 15px green;
+	margin: 12px;
+}
+
+/* BREADCRUMB */
+
+.breadcrumb li {
+  float: left;
+  list-style: none; /* remove any decoration of the list */
+}
+
+.breadcrumb a { /* to decorate the link, use "a" element ADDLINK */
+  color: #fff;
+  background: #556B2F;
+  text-decoration: none;
+  position: relative;
+  line-height: 30px;
+  text-align: center;
+  margin-right: 15px;
+  padding: 7px 5px 8px 5px;
+  font-family: Monospace;
+  display: inline; /* to make breadcrumbs appear in a line, use "display" property */
+}
+
+.breadcrumb a::before,
+.breadcrumb a::after {
+  content: ""; /* to make the > arrow in between breadcrumb. Alternative can be ">" to display > or "/\00a0" to display / */
+  position: absolute;
+  border-color: #556B2F;
+  border-style: solid;
+  border-width: 15px 5px;
+}
+
+.breadcrumb a::before {
+  left: -10px;
+  border-left-color: transparent;
+}
+
+.breadcrumb a::after {
+  left: 100%;
+  border-color: transparent;
+  border-left-color: #556B2F; /* to make the tail transparent */
+}
+
+.breadcrumb a:hover { /* to decorate link when hover, use pseudo class ADDLINK */
+  background-color: blue;
+}
+.breadcrumb a:hover::before {
+  border-color: blue;
+  border-left-color: transparent;
+}
+.breadcrumb a:hover::after {
+  border-left-color: blue;
+}
+
+
+
+
+/*stylesheet for stylesheet html */
+
+div.stylesheet {
+	margin: 150px 150px 150px 150px;
+	padding: 100px 100px;
+	background-color: white;
 	border: 2px solid black;
 	border-radius: 3px;
-	margin-bottom: 20px;
+	text-align: top;
+}
+
+div.sscolor,
+div.sstextstyle,
+div.ssfont {
+	display: inline-block;
+	box-sizing: content-box;
+	margin: 20px;
+	text-align: top;
+
+}
+
+p.sscolor {
+	display: block;
+	height: 50px;
+	width: 180px;
+	border: 2px solid black;
+	margin: 10px 10px;
+	padding: 20px;
+	font-family: "Poppins";
+	font-size: 13px;
+	word-wrap: break-word;
+
+}
+
+
+p.sstextstyle {
+	display: block;
+	height: 30px;
+	width: 180px;
+	border: 2px dotted black;
+	margin: 10px 10px;
+	padding: 20px;
+	font-family: "Poppins";
+	font-size: 13px;
+	word-wrap: break-word;
+	background-color: white
+
+}
+aside {
+	display: block;
+	font-family: "Poppins";
+	font-size: 10px;
+}
+
+h2.ssfont {
+	font-size: 20px;
+	text-decoration: underline;
+	font-weight: 400;
+}
+
+h3.ssfont {
+	font-size:15px;
+	font-weight: 400;
 }
